LayoutTests:

Reviewed by Mitz.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=11277
        REGRESSION: Incomplete repaint of overflow areas when deleting

        * fast/repaint/overflow-delete-line-expected.checksum: Added.
        * fast/repaint/overflow-delete-line-expected.png: Added.
        * fast/repaint/overflow-delete-line-expected.txt: Added.
        * fast/repaint/overflow-delete-line.html: Added.
        * fast/repaint/overflow-scroll-delete-expected.checksum: Added.
        * fast/repaint/overflow-scroll-delete-expected.png: Added.
        * fast/repaint/overflow-scroll-delete-expected.txt: Added.
        * fast/repaint/overflow-scroll-delete.html: Added.
        * fast/repaint/overflow-outline-repaint-expected.checksum: Added.
        * fast/repaint/overflow-outline-repaint-expected.png: Added.
        * fast/repaint/overflow-outline-repaint-expected.txt: Added.
        * fast/repaint/overflow-outline-repaint.html: Added.

WebCore:

        Reviewed by Mitz.

        - Fix for http://bugs.webkit.org/show_bug.cgi?id=11277
        REGRESSION: Incomplete repaint of overflow areas when deleting

        Restrict the repaint rect for overflow blocks after the height has been fully computed.
        Also, adjust the repaint rect coordinates for the scroll offset.

        * rendering/RenderBlock.cpp: (WebCore::RenderBlock::layoutBlock):
        * rendering/bidi.cpp: (WebCore::RenderBlock::layoutInlineChildren):



Canonical link: https://commits.webkit.org/14738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17524 268f45cc-cd09-0410-ab3c-d52691b4dbfc