WebCore/rendering/RenderBlock.cpp
@@ -554,11 +554,25 @@ void RenderBlock::layoutBlock(bool relayoutChildren)
     if (checkForRepaint)
         didFullRepaint = repaintAfterLayoutIfNeeded(oldBounds, oldFullBounds);
     if (!didFullRepaint && !repaintRect.isEmpty()) {
-        RenderView* v = view();
-        if (v && v->frameView()) {
-            repaintRect.inflate(maximalOutlineSize(PaintPhaseOutline));
-            v->frameView()->addRepaintInfo(this, repaintRect); // We need to do a partial repaint of our content.
+    
+        repaintRect.inflate(maximalOutlineSize(PaintPhaseOutline));
+        
+        if (hasOverflowClip()) {
+            // Adjust repaint rect for scroll offset
+            int x = repaintRect.x();
+            int y = repaintRect.y();
+            layer()->subtractScrollOffset(x, y);
+            repaintRect.setX(x);
+            repaintRect.setY(y);
+
+            // Don't allow this rect to spill out of our overflow box.
+            repaintRect.intersect(IntRect(0, 0, m_width, m_height));
         }
+    
+        RenderView* v = view();
+        // Make sure the rect is still non-empty after intersecting for overflow above
+        if (!repaintRect.isEmpty() && v && v->frameView())
+            v->frameView()->addRepaintInfo(this, repaintRect); // We need to do a partial repaint of our content.
     }
     setNeedsLayout(false);
 }
